# physarum

./: Cargo.toml  README.md
src/: conway.comp  conway_render.comp  game.rs  gpu.rs  main.rs  renderer.rs  shader.frag  shader.vert
src/conway/: conway.comp  mod.rs
src/physarum/: diffusion.comp  mod.rs  physarum.comp  settings.rs  shadertoy.wgsl
