[package]
name = "physarum"
version = "0.1.0"
authors = ["Lucas Pluvinage <lucas.pluvinage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.3"
byteorder = "1.3"
zerocopy = "0.5.0"
image = "0.23"
winit = "0.25"
winit_input_helper = "0.10.0"
shaderc = "0.7"
cgmath = "0.18"
env_logger = "0.7"
log = "0.4"
wgpu = "0.7"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
 
[profile.release]
debug = 1